# dafreq

./: LICENSE  README.md  contoh.csv  pyproject.toml
components/: body.py  cari.py  pohon.py  sidebar.py
dafreq/: main.py
layout/: default.py
layouts/: default.py
